# SignalryAgent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  api.py  api.py.save  eval.py  export_feedback.py  feedback_store.py  ingest.py  main.py  models.py  outcome_store.py  process.py  pyproject.toml  smoke_test.py  store.py  surface.py
data/: eval_set_from_feedback.jsonl  mock_posts.json  raw_posts.json  realistic_signals.json  sample_output.json
docs/: RUNBOOK.md
frontend/: middleware.ts
frontend/app/: globals.css  landing.css  layout.tsx  page.tsx  page.tsx.save
frontend/app/app/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/demo/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: BriefingCard.tsx  ChatMessage.tsx  LiveDemo.tsx  MomentumAlert.tsx  SignalCard.tsx
frontend/frontend/app/: layout.tsx  page.tsx
frontend/frontend/app/app/: page.tsx
signalry/: __init__.py  __main__.py  classify.py  filter.py  ingest.py  models.py  momentum.py  pipeline.py  queue.py
signalry/connectors/: __init__.py  base.py  discord.py  mock.py  realistic_mock.py  telegram.py
tests/: test_core.py  test_realistic_mock.py
